# OctreeRayTracer

./: .gitignore  CMakeLists.txt  README.md  readMe  runner.py  runner_centered.py  runner_maxspheres0.py  stats.csv  stats_center_camera.csv  stats_maxspheres0.csv  test.py
analysis/: analysis copy 2.ipynb  analysis copy.ipynb  analysis.ipynb  analysis2.ipynb  analysis_octree.ipynb  analysis_octree_naive.ipynb  maxspheres0.ipynb  runner.py  runner_centered.py  stats.csv  stats_2.csv  stats_center_camera.csv  stats_maxspheres0.csv
include/glad/: glad.h
shaders/: fragment_shader.glsl  octree_fragment_shader.glsl  vertex_shader.glsl
src/: config.h  glad.c  main.cpp  mesh.cpp  mesh.h  octree.cpp  octree.h  raytracer.cpp  raytracer.h  shader.cpp  shader.h  shaders.cpp  sphere.h  triangle.cpp  triangle.h
src/opengl/: camera.h  mesh.cpp  shader.cpp
